tests/neg/i7028.scala
object Test {
  "abc"
    .foo       // error

  "abc"
    .bar.baz   // error

  "abc"
    .bar       // error
    .baz
}